# easy-2d-renderer

./: Cargo.toml  README.md
src/: main.rs  shader.wgsl
