[package]
name = "easy-2d-renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.29.3", features = ["default", "rwh_05"] }
env_logger = "0.10.0"
log = "0.4.20"
wgpu = "0.18.0"
tokio = { version = "1", features = ["full"] }
bytemuck = { version = "1", features = [ "derive" ] }